# ActiveSearch-Modified

./: .gitignore  README.md  README.txt
7s/: adjust.sh  fast_test.sh  full_test.sh  median.sh  prepare.sh  prepare_sift.sh  run.sh  temp  temp.log.stats.txt  temp.log.times.txt  test.sh  test_opengv.color.corr  test_opengv.result.txt  test_opengv.txt  todo
7s/chess_few/: frame-000000.color.key  frame-000001.color.key  frame-000001.color.sift.backup  frame-000001.pose.txt  frame-000002.color.key  frame-000002.color.sift.backup  frame-000002.pose.txt  frame-000003.color.key  frame-000003.color.sift.backup  frame-000003.pose.txt  frame-000004.color.key  frame-000004.color.sift.backup  frame-000004.pose.txt  frame-000005.color.key  frame-000005.pose.txt  frame-000006.color.key  frame-000006.pose.txt  frame-000007.color.key  frame-000007.pose.txt  frame-000008.color.key  frame-000008.color.sift.backup  frame-000008.pose.txt  frame-000009.color.key  frame-000009.pose.txt  frame-000010.color.key  frame-000010.color.sift.backup  frame-000010.pose.txt  frame-000011.color.key  frame-000011.color.sift.backup  frame-000011.pose.txt  frame-000012.color.key  frame-000012.color.sift.backup  frame-000012.pose.txt  frame-000013.color.key  frame-000013.color.sift.backup  (+1 more)
ACG_Localizer/: CMakeLists.txt
RansacLib/: CMakeLists.txt
RansacLib/examples/: CMakeLists.txt  calibrated_absolute_pose_estimator.cc  localization_with_gt.cc
scripts/: bof.py  build_as.sh  calc.py  copy.sh  extract.py  prepare_sift.sh  prepare_superpoint.sh  run.sh  split.py  superpoint.py  test.sh
(+352 files in other folders)
